# Tesseract

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  demo.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/: Dockerfile  deps.py  main.py
data/Demo/: meeting_01_kickoff.txt  meeting_02_sprint3_review.txt  meeting_03_architecture_review.txt  meeting_04_security_review.txt  meeting_05_resolution_call.txt
data/audio/: amiBuild-4492-Wed-Jul-22-2026.manifest.txt  amiBuild-4492-Wed-Jul-22-2026.wget.bat
data/samples/: design_review.txt  sprint_planning.txt  stakeholder_sync.txt
docs/: DEMO_SCRIPT.md  IMPLEMENTATION_PLAN.md  LYZR_SETUP.md  PROJECT_STATUS.md  Product-Requirements-Document-PRD-Tesseract (7).md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
tests/: conftest.py  test_api.py  test_async_decoupling.py  test_conflict_resolution.py  test_explainability.py  test_extractor.py  test_gemini_integration.py  test_graph_store.py  test_health_api.py  test_hybrid_extractor.py  test_injection_protection.py  test_lyzr_integration.py  test_mcp_tools.py  test_meeting_deletion.py  test_meetings.py  test_models.py  test_observability.py  test_pipeline.py  test_purge_api.py  test_vector_store.py
tests/fixtures/: meeting_01.txt  meeting_02.txt  (+2 more)
threadline/: __init__.py  briefing.py  cli.py  config.py  embeddings.py  extractor.py  graph_store.py  graph_store_neo4j.py  models.py  pipeline.py  security.py  summarizer.py  vector_store.py  vector_store_qdrant.py
(+46 files in other folders)
