[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threadline"
version = "0.1.0"
description = "Meeting intelligence pipeline with knowledge graph, semantic search, and executive briefing"
requires-python = ">=3.9"
dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # LLM — both providers, config-switched
    "openai>=1.35",
    "google-generativeai>=0.7",

    # Agent frameworks — ADK (with A2A support) + LangGraph
    "google-adk[a2a]>=1.0",
    "langgraph>=0.4",

    # MCP SDK for custom tool servers
    "mcp>=1.0",

    # Stores
    "neo4j>=5.20",
    "qdrant-client>=1.9",

    # Embeddings (local CPU-only, ~80 MB; pre-downloaded in Docker)
    "sentence-transformers>=3.0",

    # CLI developer tool
    "typer[all]>=0.12",
    "rich>=13.7",
]

[project.scripts]
threadline = "threadline.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",      # FastAPI TestClient
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["threadline*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires running Docker services (Neo4j, Qdrant)",
    "llm: requires a real LLM API key",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
